--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "es6-promise": "^4.0.5",
     "isomorphic-fetch": "^2.2.1",
     "react": "^15.4.2",
+    "react-audio-player": "^0.3.2",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
     "whatwg-fetch": "^2.0.1"
   },
   "scripts": {
