--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-audio-player": "^0.3.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
+    "soundcloud": "^3.1.2",
     "whatwg-fetch": "^2.0.1"
   },
   "scripts": {
