--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-audio-player": "^0.3.3",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
+    "react-router-dom": "^4.1.2",
     "soundcloud": "^3.1.2",
     "whatwg-fetch": "^2.0.1"
   },
