--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "soundcloud-redesign",
-  "homepage": "https://kantelabs.github.io/KanteCloud",
+  "homepage": "https://kantelabs.github.io/KanteCloud/",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
