--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "soundcloud-redesign",
+  "name": "KanteCloud",
   "homepage": "https://kantelabs.github.io/KanteCloud/",
   "version": "0.1.0",
   "private": true,
