--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "gh-pages": "^1.0.0",
-    "react-scripts": "0.8.5"
+    "gh-pages": "^1.0.0"
   },
   "dependencies": {
     "es6-promise": "^4.0.5",
     "isomorphic-fetch": "^2.2.1",
     "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-audio-player": "^0.3.3",
-    "react-dom": "^15.4.2",
     "react-router-dom": "^4.1.2",
+    "react-scripts": "1.0.11",
     "soundcloud": "^3.2.1",
     "whatwg-fetch": "^2.0.1"
   },
