--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "es6-promise": "^4.0.5",
     "isomorphic-fetch": "^2.2.1",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1",
     "react-audio-player": "^0.3.3",
+    "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.2",
-    "react-scripts": "1.0.11",
+    "react-scripts": "^1.0.11",
     "soundcloud": "^3.2.1",
     "whatwg-fetch": "^2.0.1"
   },
